video-sink: fix RGBx/BGRx mapping

These should be treated as 24bpp formats.

https://bugzilla.gnome.org/show_bug.cgi?id=780195